--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -33,6 +33,8 @@ img {
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
+
+  justify-content: space-between;
 }
 
 .header {
@@ -75,11 +77,7 @@ img {
   align-items: center;
   justify-content: space-between;
 }
-@media (max-width: 1200px) {
-  .header-navigation {
-    display: none;
-  }
-}
+
 
 .header-navigation-links {
   display: flex;
